adjusted time and thumbnail

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="og:title" property="og:title" content="Edna's Birthday Countdown">
 <meta name="description" content="A little surprise for Edna when the timer hits 0">
 <meta property="og:image" content="https://raw.githubusercontent.com/rapsamaniego27/birthday-kei/master/images/thumb.JPG">
-<meta property="og:url" content="https://birthday-kei.netlify.app/">
+<meta property="og:url" content="https://birthday-edna.netlify.app/">
 <link rel="shortcut icon" href="#">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
-<body>
+<body class="body-flex">
   <div id="wrapper">
     <h3 class="cake meta--hide"><i class="fas fa-birthday-cake fa-3x cake"></i></h3>
     <h1 id="pageTitle">Hello my darling</h1>
@@ -142,8 +142,8 @@
           class="fab fa-facebook-f"></i></a>
       <a href="mailto:rapsamaniego27@gmail.com?subject=Greetings Ralph" class="social-media" target="_blank"><i
           class="fas fa-envelope"></i></a>
-      <a href="https://twitter.com/Rapunk77" class="social-media"><i class="fab fa-twitter"></i></a>
-      <a href="https://github.com/rapsamaniego27/birthday-kei" class="social-media"><i class="fab fa-github"></i></a>
+      <a href="https://twitter.com/rapunk77" class="social-media"><i class="fab fa-twitter"></i></a>
+      <a href="https://birthday-edna.netlify.app/" class="social-media"><i class="fab fa-github"></i></a>
     </div>
     <p class="footer-texts">Coded by yours truly Rap Esteva &copy; 2023</p>
   </footer>
