adjusted time and thumbnail

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta name="og:title" property="og:title" content="Edna's Birthday Countdown">
 <meta name="description" content="A little surprise for Edna when the timer hits 0">
-<meta property="og:image" content="https://raw.githubusercontent.com/rapsamaniego27/birthday-kei/master/images/thumb.JPG">
+<meta property="og:image" content="https://github.com/rapsamaniego27/birthday-edna/blob/master/images/thumb.JPG?raw=true">
 <meta property="og:url" content="https://birthday-edna.netlify.app/">
 <link rel="shortcut icon" href="#">
 <link rel="preconnect" href="https://fonts.gstatic.com">
